Redirect leadsource.cc to https

--- a/.ebextensions/040_nginx_rewrites.config
+++ b/.ebextensions/040_nginx_rewrites.config
@@ -67,6 +67,10 @@ files:
             set $doredirect "${doredirect}X";
         }
 
+        if ($host = "leadsource.cc") {
+            set $doredirect "${doredirect}X";
+        }
+
         if ($host ~ ".*.virtualarmour.com") {
             set $doredirect "${doredirect}X";
         }
@@ -76,7 +80,7 @@ files:
         }
         proxy_set_header X-Scheme $scheme;
 
-        
+
 
 
   "/tmp/indigeweb_https_redirect.sh":
