Force http->https for am.amrvlvr.com

--- a/.ebextensions/040_nginx_rewrites.config
+++ b/.ebextensions/040_nginx_rewrites.config
@@ -55,6 +55,10 @@ files:
             set $doredirect "${doredirect}X";
         }
 
+        if ($host = "am.amrvlvr.com") {
+            set $doredirect "${doredirect}X";
+        }
+
         if ($host = "techevent.us") {
             set $doredirect "${doredirect}X";
         }
