Add redirect for sdjg

--- a/.ebextensions/040_nginx_customer_sites.config
+++ b/.ebextensions/040_nginx_customer_sites.config
@@ -433,24 +433,7 @@ files:
     group: root
     mode: "000644"
     owner: root
-  /etc/nginx/conf.d/00_indigeweb_sdjgfoundation_org.conf:
-    content: |
-        server {
-          listen 8080;
-          server_name .sdjgfoundation.org;
-          location / {
-            set $hostheader $host;
-            proxy_set_header x-host $host;
-              if ( $host !~* "indigenous.io" ){
-                set $hostheader sandiegojuniorlifeguardfoundation.indigenous.io;
-              }
-              proxy_pass $scheme://nodejs;
-              proxy_set_header  Host  sandiegojuniorlifeguardfoundation.indigenous.io;
-          }
-        }
-    group: root
-    mode: "000644"
-    owner: root
+
   /etc/nginx/conf.d/00_indigeweb_sipofcolor_com.conf:
     content: |
         server {
@@ -1039,3 +1022,13 @@ files:
         group: root
         mode: "000644"
         owner: root
+  /etc/nginx/conf.d/00_indigeweb_sdjgfoundation_org.conf:
+      content: |
+          server {
+            listen 8080;
+            server_name .sdjgfoundation.org;
+            return 301 $scheme://preventdrowningfoundation.org$request_uri;
+          }
+      group: root
+      mode: "000644"
+      owner: root
