adding optional second parameter to deploy script for multi-region; generalized ebextension file

--- a/.ebextensions/070_awslogs.config
+++ b/.ebextensions/070_awslogs.config
@@ -12,33 +12,33 @@ files:
       datetime_format = %b %d %H:%M:%S
       file = /var/log/messages
       buffer_duration = 5000
-      log_stream_name = prod/messages-{instance_id}
+      log_stream_name = ENVIRONMENT/messages-{instance_id}
       initial_position = start_of_file
       log_group_name = /aws/elasticbeanstalk
       [/var/log/nginx/access]
       datetime_format = %b %d %H:%M:%S
       file = /var/log/nginx/access.log
       buffer_duration = 5000
-      log_stream_name = prod/nginx
+      log_stream_name = ENVIRONMENT/nginx
       initial_position = start_of_file
       log_group_name = /aws/elasticbeanstalk
       [/var/log/nginx/error]
       datetime_format = %b %d %H:%M:%S
       file = /var/log/nginx/error.log
       buffer_duration = 5000
-      log_stream_name = prod/nginx
+      log_stream_name = ENVIRONMENT/nginx
       initial_position = start_of_file
       log_group_name = /aws/elasticbeanstalk
       [/var/log/nodejs/nodejs]
       datetime_format = %Y-%m-%d %H:%M:%S
       file = /var/log/nodejs/nodejs.log
       buffer_duration = 5000
-      log_stream_name = prod/nodejs
+      log_stream_name = ENVIRONMENT/nodejs
       initial_position = start_of_file
       log_group_name = /aws/elasticbeanstalk
 
 commands:
   update-region:
-    command: sed -i 's/east/west/g' /etc/awslogs/awscli.conf
+    command: sed -i 's/east/REGION/g' /etc/awslogs/awscli.conf
   restart-awslogs:
     command: service awslogs restart
