Revert "Front - end - removed unused library refrences from bower"
This reverts commit 25bb9e37e7d7051e434b6ef97bf30457edf321ab.

--- a/bower.json
+++ b/bower.json
@@ -30,6 +30,7 @@
     "angular-google-places-autocomplete": "0.2.7",
     "angular-http-auth": "~1.2.3",
     "angular-input-date": "1.0.4",
+    "angular-jqcloud": "1.0.1",
     "angular-ladda": "0.2.2",
     "angular-loading-bar": "0.7.1",
     "angular-local-storage": "~0.2.5",
@@ -91,7 +92,8 @@
     "froala-wysiwyg-editor": "2.7.2",
     "highcharts-ng": "0.0.8",
     "highcharts-release": "latest",
-    "highmaps-release": "latest",    
+    "highmaps-release": "latest",
+    "jqcloud2": "2.0.1",
     "jquery": "2.1.4",
     "jquery-ui": "1.11.4",
     "jquery.sparkline.build": "2.1.3",
