--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
     "grunt-contrib-nodeunit": "~0.3.3",
     "grunt-contrib-requirejs": "~0.4.1",
     "grunt-contrib-sass": "~0.9.2",
-    "grunt-contrib-uglify": "*",
+    "grunt-contrib-uglify": "3.2.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-copy-to": "0.0.10",
     "grunt-csssplit": "0.2.1",
