--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "firebase": "^5.0.4",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
+    "i": "^0.3.6",
     "jest": "20.0.4",
     "mobx": "^4.1.1",
     "mobx-react": "^5.0.0",
+    "npm": "^6.1.0",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.6",
@@ -38,6 +40,8 @@
     "react": "^15.6.1",
     "react-dev-utils": "^4.0.1",
     "react-dom": "^15.6.1",
+    "react-firebase-file-uploader": "^2.4.2",
+    "react-recaptcha": "^2.3.10",
     "react-router-dom": "^4.2.2",
     "recompose": "^0.25.0",
     "style-loader": "0.18.2",
